--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root{
+    --title-font: 'Bebas Neue', cursiva;
+    --text-font: 'PT Sans', Sans-serif;
+}
 /* Selector por etiqueta */
 /* modificar el tamaño de fuente de la etiqueta <html> para 
 utilizar las medidas Rem de la misma forma que los pixeles, así:
@@ -16,4 +20,17 @@ html{
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+.title{
+    font-family: var(--title-font);
+    font-size: 6rem;
+}
+.subtitle{
+    font-family: var(--title-font);
+    font-size: 4rem;
+}
+p{
+    font-family: var(--text-font);
+    font-size: 2rem;
+    text-align: center;
 }
